add npm start script for CLI

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "It's like spell-check for datasets",
   "main": "electron/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
