--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "d3": "^3.5.12",
     "electron-prebuilt": "^0.36.3",
-    "inquirer": "^0.11.2"
+    "inquirer": "^0.11.2",
+    "dataproofer-core-suite": "git@github.com:dataproofer/core-suite.git"
   }
 }
