--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "d3": "^3.5.12",
     "electron-prebuilt": "^0.36.3",
     "inquirer": "^0.11.2",
-    "dataproofer-core-suite": "git@github.com:dataproofer/core-suite.git"
+    "dataproofer-core-suite": "git@github.com:dataproofer/core-suite.git",
+    "dataproofer-geo-suite": "git@github.com:dataproofer/geo-suite.git",
+    "dataproofer-stats-suite": "git@github.com:dataproofer/stats-suite.git"
   }
 }
