--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "electron-prebuilt": "^0.36.3",
     "inquirer": "^0.11.2",
     "jquery": "^2.2.0",
-    "slickgrid": "^2.1.0"
+    "slickgrid": "^2.1.0",
+    "tabletop": "^1.4.2"
   }
 }
