--- a/electron/package.json
+++ b/electron/package.json
@@ -9,12 +9,12 @@
   },
   "dependencies": {
     "d3": "^3.5.12",
-    "lodash": "^4.0.0",
+    "dataproofer": "file:../",
     "electron-prebuilt": "^0.36.3",
     "jquery": "^2.2.0",
+    "lodash": "^4.0.0",
     "slickgrid": "^2.1.0",
-    "tabletop": "^1.4.2",
-    "dataproofer":"file:../"
+    "tabletop": "^1.4.3"
   },
   "devDependencies": {
     "electron-packager": "^5.2.1"
