style tweaks. update npm package license

--- a/electron/package.json
+++ b/electron/package.json
@@ -4,6 +4,7 @@
   "description": "DataProofer",
   "main": "app.js",
   "author": "DataProofer",
+  "license": "GNU GPL",
   "scripts": {
     "electron": "./node_modules/.bin/electron .",
     "package": "./node_modules/.bin/electron-packager . Dataproofer --platform=darwin --arch=x64 --version=0.36.4 --ignore='(executables|sample-datasets)' --out=executables --overwrite"
