--- a/src/package.json
+++ b/src/package.json
@@ -16,7 +16,7 @@
     "excel"
   ],
   "author": "DataProofer",
-  "license": "ISC",
+  "license": "GNU GPL",
   "bugs": {
     "url": "https://github.com/dataproofer/dataproofer/issues"
   },
