--- a/electron/package.json
+++ b/electron/package.json
@@ -1,14 +1,13 @@
 {
   "name": "dataproofer-electron",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "DataProofer",
   "main": "app.js",
   "author": "DataProofer <dataproofer@dataproofer.org>",
   "license": "GPL-3.0",
   "scripts": {
     "electron": "./node_modules/.bin/electron .",
-    "package-mac": "./node_modules/.bin/electron-packager . Dataproofer --platform=darwin --arch=x64 --version=0.36.11 --ignore='(executables|sample-datasets)' --out=executables --overwrite",
-    "package": "./node_modules/.bin/electron-packager . Dataproofer --platform=darwin --arch=x64 --icon='icons/_dp-robot.png.icns' --version=0.36.11 --ignore='(executables|sample-datasets)' --out=executables --overwrite"
+    "package-mac": "./node_modules/.bin/electron-packager . Dataproofer --platform=darwin --arch=x64 --icon='icons/_dp-robot.png.icns' --version=0.36.11 --ignore='(executables|sample-datasets)' --out=executables --overwrite"
   },
   "repository": {
     "type": "git",
