fix https to git links

--- a/electron/package.json
+++ b/electron/package.json
@@ -16,10 +16,10 @@
   "dependencies": {
     "d3": "^3.5.12",
     "dataproofer": "file:../src/",
-    "dataproofer-core-suite": "https://github.com/dataproofer/core-suite.git",
-    "dataproofer-geo-suite": "https://github.com/dataproofer/geo-suite.git",
-    "dataproofer-info-suite": "https://github.com/dataproofer/info-suite.git",
-    "dataproofer-stats-suite": "https://github.com/dataproofer/stats-suite.git",
+    "dataproofer-core-suite": "git://github.com/dataproofer/core-suite.git",
+    "dataproofer-geo-suite": "git://github.com/dataproofer/geo-suite.git",
+    "dataproofer-info-suite": "git://github.com/dataproofer/info-suite.git",
+    "dataproofer-stats-suite": "git://github.com/dataproofer/stats-suite.git",
     "electron-default-menu": "^0.1.1",
     "electron-prebuilt": "^0.36.3",
     "gsheets": "^1.2.3",
