--- a/electron/package.json
+++ b/electron/package.json
@@ -14,6 +14,7 @@
     "url": "git+https://github.com/dataproofer/dataproofer.git"
   },
   "dependencies": {
+    "codemirror": "^5.13.2",
     "d3": "^3.5.12",
     "dataproofer": "file:../src/",
     "dataproofer-core-suite": "git://github.com/dataproofer/core-suite.git",
