--- a/src/package.json
+++ b/src/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "d3": "^3.5.12",
     "dataproofertest-js": "git://github.com/dataproofer/dataproofertest.js.git",
-    "inquirer": "^0.11.2"
+    "inquirer": "^0.11.2",
+    "lodash": "^4.6.1"
   }
 }
