--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dataproofer",
   "version": "0.1.3",
-  "description": "It's like spell-check for datasets",
+  "description": "A proofreader for your datasets",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -24,6 +24,8 @@
   "dependencies": {
     "d3": "^3.5.12",
     "dataproofertest-js": "git://github.com/dataproofer/dataproofertest.js.git",
-    "inquirer": "^0.11.2"
+    "indian-ocean": "^1.1.1",
+    "inquirer": "^0.11.2",
+    "xlsx": "^0.8.0"
   }
 }
