--- a/src/package.json
+++ b/src/package.json
@@ -27,5 +27,9 @@
     "indian-ocean": "^1.1.1",
     "inquirer": "^0.11.2",
     "xlsx": "^0.8.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^6.0.2",
+    "eslint": "^2.7.0"
   }
 }
