--- a/electron/package.json
+++ b/electron/package.json
@@ -21,7 +21,7 @@
     "dataproofer-geo-suite": "git://github.com/dataproofer/geo-suite.git",
     "dataproofer-info-suite": "git://github.com/dataproofer/info-suite.git",
     "dataproofer-stats-suite": "git://github.com/dataproofer/stats-suite.git",
-    "dataproofertest": "git://github.com/dataproofer/dataproofertest.js.git",
+    "dataproofertest-js": "git://github.com/dataproofer/dataproofertest-js.git",
     "electron-default-menu": "^0.1.1",
     "electron-prebuilt": "^0.37.5",
     "gsheets": "^1.2.3",
