--- a/src/package.json
+++ b/src/package.json
@@ -23,7 +23,7 @@
   "homepage": "https://github.com/dataproofer/dataproofer#readme",
   "dependencies": {
     "d3": "^3.5.12",
-    "dataproofertest-js": "git://github.com/dataproofer/dataproofertest.js.git",
+    "dataproofertest-js": "git://github.com/dataproofer/dataproofertest-js.git",
     "indian-ocean": "^1.1.1",
     "inquirer": "^0.11.2",
     "xlsx": "^0.8.0"
