--- a/src/package.json
+++ b/src/package.json
@@ -22,10 +22,11 @@
   },
   "homepage": "https://github.com/dataproofer/dataproofer#readme",
   "dependencies": {
+    "chalk": "^1.1.3",
     "d3": "^3.5.12",
     "dataproofertest-js": "git://github.com/dataproofer/dataproofertest-js.git",
     "indian-ocean": "^1.1.1",
-    "inquirer": "^0.11.2",
+    "optimist": "^0.6.1",
     "xlsx": "^0.8.0"
   },
   "devDependencies": {
