--- a/electron/package.json
+++ b/electron/package.json
@@ -22,8 +22,8 @@
     "dataproofer-info-suite": "git://github.com/dataproofer/info-suite.git",
     "dataproofer-stats-suite": "git://github.com/dataproofer/stats-suite.git",
     "dataproofertest-js": "git://github.com/dataproofer/dataproofertest-js.git",
+    "electron": "^1.4.3",
     "electron-default-menu": "^0.1.1",
-    "electron-prebuilt": "^0.37.5",
     "gsheets": "^1.2.3",
     "handsontable": "^0.24.1",
     "jquery": "^2.2.3",
