--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dataproofer",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "A proofreader for your datasets",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/dataproofer/dataproofer.git"
   },
   "bin": {
-    "dataproofer": "./bin/dataproofer"
+    "dataproofer": "./index.js"
   },
   "keywords": [
     "data",
