improved sampling logic handles all rows up to a thousand, samples a quarter of the rows at a time for datasets between 1000 and 10,000 rows, and then has a maximum of 10,000 as its largest possible sample size. CLI allows for tweaking the sample size's minimum, maximum, and ratio.

--- a/electron/package.json
+++ b/electron/package.json
@@ -28,6 +28,7 @@
     "handsontable": "^0.24.1",
     "jquery": "^2.2.3",
     "lodash": "^4.8.2",
+    "pluralize": "^3.0.0",
     "require-from-string": "^1.1.0",
     "simple-statistics": "^1.0.1",
     "tipsy": "^1.0.0",
