--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
-open_collective: @dataproofer
-custom: ['Knight Foundation','Vocativ']
+open_collective: dataproofer
+custom: ['http://knightfoundation.org/','https://www.vocativ.com/']
