--- a/src/package.json
+++ b/src/package.json
@@ -1,46 +1,49 @@
 {
   "name": "dataproofer",
-  "version": "1.0.8",
+  "version": "2.0.0",
   "description": "A proofreader for your datasets",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "yarn node index.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dataproofer/dataproofer.git"
   },
-  "bin": {
-    "dataproofer": "./index.js"
-  },
+  "bin": "./index.js",
   "keywords": [
     "data",
     "csv",
     "excel"
   ],
-  "author": "DataProofer <dataproofer@dataproofer.org>",
+  "author": "Dataproofer <dataproofer@dataproofer.org>",
   "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/dataproofer/dataproofer/issues"
   },
   "homepage": "https://github.com/dataproofer/dataproofer#readme",
   "dependencies": {
-    "chalk": "^1.1.3",
-    "commander": "^2.9.0",
-    "d3": "^3.5.17",
-    "dataproofertest-js": "git://github.com/dataproofer/dataproofertest-js.git",
+    "chalk": "^4.1.0",
+    "commander": "^7.1.0",
+    "d3": "^4.2.7",
+    "dataproofer-core-suite": "workspace:*",
+    "dataproofer-geo-suite": "workspace:*",
+    "dataproofer-info-suite": "workspace:*",
+    "dataproofer-stats-suite": "workspace:*",
+    "dataproofertest-js": "workspace:*",
     "indian-ocean": "^1.1.1",
-    "lodash": "^4.16.4",
+    "lodash": "^4.17.20",
     "optimist": "^0.6.1",
-    "rw": "^1.3.2",
-    "xlsx": "^0.8.0",
-    "dataproofer-info-suite": "dataproofer/info-suite",
-    "dataproofer-core-suite": "dataproofer/core-suite",
-    "dataproofer-stats-suite": "dataproofer/stats-suite",
-    "dataproofer-geo-suite": "dataproofer/geo-suite"
+    "rw": "^1.3.3",
+    "xlsx": "^0.16.9"
   },
   "devDependencies": {
-    "babel-eslint": "^6.0.2",
-    "eslint": "^2.7.0"
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
+    "@babel/eslint-plugin": "^7.12.13",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "^2.2.1"
   }
 }
