--- a/.github/workflows/lint-and-run.yml
+++ b/.github/workflows/lint-and-run.yml
@@ -27,4 +27,5 @@ jobs:
           node-version: ${{ matrix.node_version }}
           architecture: ${{ matrix.architecture }}
       - run: yarn install
+      - run: yarn eslint . --ext .js
       - run: yarn dataproofer
