--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "packages/*"
   ],
   "scripts": {
-    "dataproofer": "yarn node src/index.js"
+    "dataproofer": "yarn node src/index.js",
+    "lint": "yarn eslint . --ext *.js"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
