--- a/.github/workflows/lint-and-run.yml
+++ b/.github/workflows/lint-and-run.yml
@@ -1,6 +1,18 @@
+name: build
+
+on:
+  push:
+    branches:
+      - dev
+  pull_request:
+    branches: [dev]
+
 jobs:
   build:
     runs-on: ${{ matrix.os }}
+    env:
+      CI: true
+      TZ: America/New_York
     strategy:
       matrix:
         os:
@@ -20,12 +32,13 @@ jobs:
             architecture: x86
     name: Node ${{ matrix.node_version }} - ${{ matrix.architecture }} on ${{ matrix.os }}
     steps:
+      - name: Checkout
       - uses: actions/checkout@v2
-      - name: Setup node
+      - name: Setup Node.js environment
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node_version }}
           architecture: ${{ matrix.architecture }}
-      - run: yarn install
-      - run: yarn eslint . --ext .js
+      - run: yarn install --frozen-lockfile --force
+      - run: yarn lint
       - run: yarn dataproofer
