appease windows linter

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,12 @@
         "vars": "all",
         "args": "none"
       }
+    ],
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
     ]
   },
   "ignorePatterns": [
