--- a/src/package.json
+++ b/src/package.json
@@ -26,11 +26,11 @@
     "chalk": "^4.1.0",
     "commander": "^7.1.0",
     "d3": "^4.2.7",
-    "dataproofer-core-suite": "workspace:*",
-    "dataproofer-geo-suite": "workspace:*",
-    "dataproofer-info-suite": "workspace:*",
-    "dataproofer-stats-suite": "workspace:*",
-    "dataproofertest-js": "workspace:*",
+    "dataproofer-core-suite": "*",
+    "dataproofer-geo-suite": "*",
+    "dataproofer-info-suite": "*",
+    "dataproofer-stats-suite": "*",
+    "dataproofertest-js": "*",
     "indian-ocean": "^1.1.1",
     "lodash": "^4.17.20",
     "optimist": "^0.6.1",
