--- a/.github/workflows/lint-and-run.yml
+++ b/.github/workflows/lint-and-run.yml
@@ -34,13 +34,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Setup Node.js environment
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node_version }}
           architecture: ${{ matrix.architecture }}
 
-      - run: yarn install --immutable
-
+      - run: yarn install --frozen-lockfile
       - run: yarn lint
       - run: yarn dataproofer
