--- a/.github/workflows/build-and-run.yml
+++ b/.github/workflows/build-and-run.yml
@@ -8,7 +8,7 @@ on:
     branches: [dev]
 
 jobs:
-  build:
+  build_and_run:
     runs-on: ${{ matrix.os }}
     env:
       CI: true
@@ -44,3 +44,6 @@ jobs:
       - run: yarn install --frozen-lockfile
       - run: yarn lint
       - run: yarn dataproofer
+      # Runs a single command using the runners shell
+      - name: Run dataproofer on all sample datasets
+        run: find ./sample-datasets/ -maxdepth 1 -type f -exec cmd option {} \; > dataproofer_test_results.log
