--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dataproofer",
-  "version": "1.6.0",
+  "version": "2.0.0",
   "description": "A proofreader for your datasets",
   "main": "index.js",
   "scripts": {
@@ -26,11 +26,11 @@
     "chalk": "^4.1.0",
     "commander": "^7.2.0",
     "d3": "^4.2.7",
-    "dataproofer-core-suite": "*",
-    "dataproofer-geo-suite": "*",
-    "dataproofer-info-suite": "*",
-    "dataproofer-stats-suite": "*",
-    "dataproofertest-js": "*",
+    "dataproofer-core-suite": "2.0.0",
+    "dataproofer-geo-suite": "2.0.0",
+    "dataproofer-info-suite": "2.0.0",
+    "dataproofer-stats-suite": "2.0.0",
+    "dataproofertest-js": "2.0.0",
     "indian-ocean": "^4.0.2",
     "lodash": "^4.17.20",
     "optimist": "^0.6.1",
