--- a/packages/core-suite/package.json
+++ b/packages/core-suite/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dataproofer-core-suite",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Core suite of tests for dataproofer",
   "main": "index.js",
   "scripts": {
@@ -18,7 +18,7 @@
   "author": "DataProofer <dataproofer@dataproofer.org>",
   "license": "GPL-3.0",
   "dependencies": {
-    "dataproofertest-js": "*",
+    "dataproofertest-js": "2.0.0",
     "lodash": "^4.17.20"
   },
   "devDependencies": {
