--- a/packages/stats-suite/package.json
+++ b/packages/stats-suite/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dataproofer-stats-suite",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "description": "Suite of advanced statistics tests for dataproofer",
   "main": "index.js",
   "scripts": {
@@ -18,7 +18,7 @@
   "author": "DataProofer <dataproofer@dataproofer.org>",
   "license": "GPL-3.0",
   "dependencies": {
-    "dataproofertest-js": "*",
+    "dataproofertest-js": "2.0.0",
     "lodash": "^4.17.20",
     "simple-statistics": "^1.0.1"
   },
