make subpackages private

--- a/packages/stats-suite/package.json
+++ b/packages/stats-suite/package.json
@@ -1,5 +1,6 @@
 {
   "name": "dataproofer-stats-suite",
+  "private": true,
   "version": "2.0.0",
   "description": "Suite of advanced statistics tests for dataproofer",
   "main": "index.js",
