--- a/packages/core-suite/package.json
+++ b/packages/core-suite/package.json
@@ -1,5 +1,6 @@
 {
   "name": "dataproofer-core-suite",
+  "private": true,
   "version": "2.0.0",
   "description": "Core suite of tests for dataproofer",
   "main": "index.js",
