--- a/packages/dataproofertest-js/package.json
+++ b/packages/dataproofertest-js/package.json
@@ -1,5 +1,6 @@
 {
   "name": "dataproofertest-js",
+  "private": true,
   "version": "2.0.0",
   "description": "Core JS class for Dataproofer tests",
   "main": "index.js",
