--- a/packages/geo-suite/package.json
+++ b/packages/geo-suite/package.json
@@ -1,5 +1,6 @@
 {
   "name": "dataproofer-geo-suite",
+  "private": true,
   "version": "2.0.0",
   "description": "Suite of geographic and mapping related tests for dataproofer",
   "main": "index.js",
