--- a/packages/info-suite/package.json
+++ b/packages/info-suite/package.json
@@ -1,5 +1,6 @@
 {
   "name": "dataproofer-info-suite",
+  "private": true,
   "version": "2.0.0",
   "description": "A set of informational scripts about Dataproofer spreadsheets",
   "main": "index.js",
